Fixed carousel arrows on mobile and resume

--- a/style.css
+++ b/style.css
@@ -590,11 +590,11 @@ html {
 }
 
 .carousel-control-prev {
-  margin-left: -55px;
+  margin-left: -15%;
 }
 
 .carousel-control-next {
-  margin-right: -55px;
+  margin-right: -15%;
 }
 
 .projectDesc h1 {
